Hide console window on start.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,6 +55,7 @@ endif()
 target_link_libraries(signtoolgui PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
 
 set_target_properties(signtoolgui PROPERTIES
+    WIN32_EXECUTABLE true
     MACOSX_BUNDLE_GUI_IDENTIFIER signtoolgui.glitchedpolygons.com
     MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
     MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
